--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.5.4",
     "vuedraggable": "^2.24.3",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.0",
+    "vuetify-draggable-treeview": "0.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
